---
source: integ-tests/tests/parser.rs
expression: spans
---
note[string]: root_fruit_apple_color
  ┌─ array_within_dotted:2:16
  │
2 │ apple.color = "red"
  │                ^^^

note[integer]: root_fruit_apple_seeds_0_size
  ┌─ array_within_dotted:5:8
  │
5 │ size = 2
  │        ^

note[table]: root_fruit_apple_seeds_0
  ┌─ array_within_dotted:4:1
  │  
4 │ ╭ [[fruit.apple.seeds]]
5 │ │ size = 2
  │ ╰────────^

note[array]: root_fruit_apple_seeds
  ┌─ array_within_dotted:4:1
  │  
4 │ ╭ [[fruit.apple.seeds]]
5 │ │ size = 2
  │ ╰────────^

note[table]: root_fruit_apple
  ┌─ array_within_dotted:4:1
  │  
4 │ ╭ [[fruit.apple.seeds]]
5 │ │ size = 2
  │ ╰────────^

note[table]: root_fruit
  ┌─ array_within_dotted:1:1
  │  
1 │ ╭ [fruit]
2 │ │ apple.color = "red"
  │ ╰───────────────────^

note[table]: root
  ┌─ array_within_dotted:1:1
  │  
1 │ ╭ [fruit]
2 │ │ apple.color = "red"
3 │ │ 
4 │ │ [[fruit.apple.seeds]]
5 │ │ size = 2
6 │ │ 
  │ ╰^
